--- a/app/components/Navbar.module.scss
+++ b/app/components/Navbar.module.scss
@@ -69,7 +69,6 @@ a.active {
         inset: 0 0 auto;
         padding-block: 16px 32px;
         background-color: #fff;
-        width: 100vw;
         gap: 0;
         z-index: -99;
 
